Fixed overlapping in cards for TravelPlan and Homepage.

--- a/frontend/src/routes/TravelPlanStyles.css
+++ b/frontend/src/routes/TravelPlanStyles.css
@@ -21,7 +21,7 @@
 	height: 100%;
 }
 
-.card-div {
+.tour-item .card-div {
 	flex: 1;
 	display: flex;
 	flex-direction: column;
@@ -35,18 +35,18 @@
 	background-color: none;
 }
 
-.card-div h2 {
+.tour-item .card-div h2 {
     font-size: 1.3rem;
     padding: 1rem 0.2rem;
 }
 
-.card-image {
+.tour-item .card-image {
     height: 200px;
     overflow: hidden;
     border-radius: 6px;
 }
 
-.card-image img {
+.tour-item .card-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -54,7 +54,7 @@
     border-radius: 6px;
 }
 
-.card-image:hover img {
+.tour-item .card-image:hover img {
     transform: scale(1.3);
 }
 
